--- Added users page

--- a/main.html
+++ b/main.html
@@ -65,6 +65,7 @@
  	<script type="text/javascript" src="js/app/controllers/loginModalController.js"></script>
  	<script type="text/javascript" src="js/app/controllers/patientActivityController.js"></script>
  	<script type="text/javascript" src="js/app/controllers/accountController.js"></script>
+ 	<script type="text/javascript" src="js/app/controllers/userController.js"></script>
 
 
 	<!-- Collection -->
