--- Added user registration

--- a/main.html
+++ b/main.html
@@ -66,6 +66,7 @@
  	<script type="text/javascript" src="js/app/controllers/patientActivityController.js"></script>
  	<script type="text/javascript" src="js/app/controllers/accountController.js"></script>
  	<script type="text/javascript" src="js/app/controllers/userController.js"></script>
+ 	<script type="text/javascript" src="js/app/controllers/newUserController.js"></script>
 
 
 	<!-- Collection -->
