--- Pre-test completed installation site

--- a/main.html
+++ b/main.html
@@ -67,6 +67,7 @@
  	<script type="text/javascript" src="js/app/controllers/accountController.js"></script>
  	<script type="text/javascript" src="js/app/controllers/userController.js"></script>
  	<script type="text/javascript" src="js/app/controllers/newUserController.js"></script>
+ 	<script type="text/javascript" src="js/app/controllers/installationController.js"></script>
 
 
 	<!-- Collection -->
