--- a/main.html
+++ b/main.html
@@ -10,32 +10,40 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		
 	<!-- Libraries -->
-	<script src="js/lib/jquery/jquery-2.2.1.min.js"></script>
-	<script src="js/lib/jquery/jquery-ui.min.js"></script>
-	<script src="js/lib/angular/angular.min.js"></script>
-	<script src="js/lib/angular/angular-route.min.js"></script>
-	<script src="js/lib/angular/angular-animate.min.js"></script>
-	<script src="js/lib/angular/angular-sanitize.min.js"></script>
-	<script src="js/lib/angular/angular-ui-router.min.js"></script>
-	<script src="js/lib/angular/angular-cookies.min.js"></script>
-	<script src="js/lib/angular/angular-idle.min.js"></script>
-	<script src="js/lib/other/moment.min.js"></script>
-	<script src="js/lib/livicon/prettify.min.js"></script>
-	<script src="js/lib/bootstrap/bootstrap.min.js"></script>
-	<script src="js/lib/bootstrap/ui-bootstrap-tpls-1.2.1.custom.min.js"></script>
+	<script src="bower_components/jquery/dist/jquery.js"></script>
+	<script src="bower_components/angular/angular.js"></script>
+	<script src="bower_components/angular-route/angular-route.js"></script>
+	<script src="bower_components/angular-animate/angular-animate.js"></script>
+	<script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+	<script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+	<script src="bower_components/angular-cookies/angular-cookies.js"></script>
+	<script src="bower_components/ng-idle/angular-idle.js"></script>
+	<script src="bower_components/moment/moment.js"></script>
+	<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+	<script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+	<script src="bower_components/rangy/rangy-core.js"></script>
+	<script src="bower_components/rangy/rangy-classapplier.js"></script>
+	<script src="bower_components/rangy/rangy-highlighter.js"></script>
+	<script src="bower_components/rangy/rangy-selectionsaverestore.js"></script>
+	<script src="bower_components/rangy/rangy-serializer.js"></script>
+	<script src="bower_components/rangy/rangy-textrange.js"></script>
+	<script src="bower_components/textAngular/dist/textAngular.js"></script>
+	<script src="bower_components/textAngular/dist/textAngular-sanitize.js"></script>
+	<script src="bower_components/textAngular/dist/textAngularSetup.js"></script>
+	<script src="bower_components/firebase/firebase.js"></script>
+	<script src="bower_components/cryptojslib/components/core.js"></script>
+	<script src="bower_components/cryptojslib/components/cipher-core.js"></script>
+	<script src="bower_components/cryptojslib/components/aes.js"></script>
+	<script src="bower_components/cryptojslib/components/mode-cfb-min.js"></script>
+	<script src="bower_components/cryptojslib/components/sha256.js"></script>
+
+	<script src="node_modules/angular-ui-grid/ui-grid.min.js"></script>
+	
 	<script src="js/lib/bootstrap/bootstrap-datetimepicker.min.js"></script>
 	<script src="js/lib/bootstrap/ui.bootstrap.materialPicker.js"></script>
 	<script src="js/lib/livicon/raphael-min.js"></script>
 	<script src="js/lib/livicon/livicons-1.4-custom.min.js"></script>
-	<script src="js/lib/ui-grid/ui-grid.min.js"></script>
-	<script src="js/lib/textAngular/textAngular-rangy.min.js"></script>
-	<script src="js/lib/textAngular/textAngular-sanitize.min.js"></script>
-	<script src="js/lib/textAngular/textAngular.min.js"></script>
 	<script src="js/lib/itemSlide/itemslide.min.js"></script>
-	<script src="js/lib/firebase/firebase.js"></script>
-	<script src="js/lib/cryptojs/aes.js"></script>
-	<script src="js/lib/cryptojs/mode-cfb-min.js"></script>
-	<script src="js/lib/cryptojs/sha256.js"></script>
 
 	<!-- Start Up -->
  	<script type="text/javascript" src="js/app/app.js"></script>
@@ -79,17 +87,24 @@
 	<!-- Config -->
  	<script type="text/javascript" src="js/config.js"></script>
 	
+	<!-- bower:css -->
+	<link rel="stylesheet" href="bower_components/textAngular/dist/textAngular.css" />
+	<!-- endbower -->
+
+	<!-- bower:font -->
+	<!-- endbower -->
+
 	<!-- Stylesheets -->
 	<link media="all" type="text/css" rel="stylesheet" href="css/lib/jquery-ui.css">
-	<link media="all" type="text/css" rel="stylesheet" href="css/lib/bootstrap.css">
+	<link media="all" type="text/css" rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
 	<link media="all" type="text/css" rel="stylesheet" href="css/lib/bootstrap-datetimepicker.css">
-	<link media="all" type="text/css" rel="stylesheet" href="css/lib/ui-grid.css">
+	<link media="all" type="text/css" rel="stylesheet" href="node_modules/angular-ui-grid/ui-grid.css">
 	<link media="all" type="text/css" rel="stylesheet" href="css/lib/animate.css">
 	<link media="all" type="text/css" rel="stylesheet" href="css/lib/livicon.css">
 	<link media="all" type="text/css" rel="stylesheet" href="css/lib/prettify.css">
 	<link media="all" type="text/css" rel="stylesheet" href="css/lib/docs.min.css">
 	<link media="all" type="text/css" rel="stylesheet" href="css/lib/font-awesome.min.css">
-	<link media="all" type="text/css" rel="stylesheet" href="css/lib/textAngular.css">
+	<link media="all" type="text/css" rel="stylesheet" href="bower_components/textAngular/dist/textAngular.css">
 	<link media="all" type="text/css" rel="stylesheet" href="css/lib/ui.bootstrap.materialPicker.css">
 
 	<link media="all" type="text/css" rel="stylesheet" href="css/style.css">
