--- Added require js

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 	<script src="js/lib/livicon/raphael-min.js"></script>
 	<script src="js/lib/livicon/livicons-1.4-custom.min.js"></script>
 	<script src="js/lib/itemSlide/itemslide.min.js"></script>
+	<script src="js/lib/require/require.js"></script>
 
 	<!-- Start Up -->
  	<script type="text/javascript" src="js/app/app.js"></script>
