--- Improved design --- Added email template and controller

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
  	<script type="text/javascript" src="js/app/controllers/userController.js"></script>
  	<script type="text/javascript" src="js/app/controllers/newUserController.js"></script>
  	<script type="text/javascript" src="js/app/controllers/installationController.js"></script>
+ 	<script type="text/javascript" src="js/app/controllers/emailController.js"></script>
  	<!-- <script type="text/javascript" src="js/app/controllers/questionnaireController.js"></script> -->
 
 
