--- Fixed missing files

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
  	<script type="text/javascript" src="js/app/controllers/newUserController.js"></script>
  	<script type="text/javascript" src="js/app/controllers/installationController.js"></script>
  	<script type="text/javascript" src="js/app/controllers/emailController.js"></script>
+ 	<script type="text/javascript" src="js/app/controllers/newEmailController.js"></script>
  	<!-- <script type="text/javascript" src="js/app/controllers/questionnaireController.js"></script> -->
 
 
