--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 </head>
 <body ng-app="opalAdmin" ng-controller="applicationController">
 	<div id="page">
-		<div ui-view></div>
+		<div ui-view style="position: relative; height: inherit;"></div>
 	</div>
  
 </body>
