--- a/index.html
+++ b/index.html
@@ -79,7 +79,11 @@
  	<script type="text/javascript" src="js/app/controllers/userController.js"></script>
  	<script type="text/javascript" src="js/app/controllers/newUserController.js"></script>
  	<script type="text/javascript" src="js/app/controllers/installationController.js"></script>
- 	<!-- <script type="text/javascript" src="js/app/controllers/questionnaireController.js"></script> -->
+ 	<script type="text/javascript" src="js/app/controllers/questionnaireController.js"></script>
+	<script type="text/javascript" src="js/app/controllers/newQuestionnaireController.js"></script>
+	<script type="text/javascript" src="js/app/controllers/questionController.js"></script>
+	<script type="text/javascript" src="js/app/controllers/newQuestionController.js"></script>
+
 
 
 	<!-- Collection -->
