--- Added new legacy questionnaire feature.         -- Frontend and backend complete         -- ToDO: publisher

--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@
 	<script type="text/javascript" src="js/app/controllers/newQuestionnaireController.js"></script>
 	<script type="text/javascript" src="js/app/controllers/questionController.js"></script>
 	<script type="text/javascript" src="js/app/controllers/newQuestionController.js"></script>
+	<script type="text/javascript" src="js/app/controllers/newLegacyQuestionnaireController.js"></script>
+	<script type="text/javascript" src="js/app/controllers/legacyQuestionnaireController.js"></script>
 
 	<!-- Collection -->
  	<script type="text/javascript" src="js/app/collections/collections.js"></script>
