--- Added diagnosis translation to web app

--- a/index.html
+++ b/index.html
@@ -89,6 +89,8 @@
 	<script type="text/javascript" src="js/app/controllers/newQuestionController.js"></script>
 	<script type="text/javascript" src="js/app/controllers/newLegacyQuestionnaireController.js"></script>
 	<script type="text/javascript" src="js/app/controllers/legacyQuestionnaireController.js"></script>
+	<script type="text/javascript" src="js/app/controllers/diagnosisTranslationController.js"></script>
+	<script type="text/javascript" src="js/app/controllers/newDiagnosisTranslationController.js"></script>
 
 	<!-- Collection -->
  	<script type="text/javascript" src="js/app/collections/collections.js"></script>
