--- Added version and build display on bottom right

--- a/index.html
+++ b/index.html
@@ -127,6 +127,9 @@
 	<div ng-include="'templates/navbar-menu.html'" ></div>
 	<div id="page">
 		<div ui-view style="position: relative; height: inherit;"></div>
+		<div class="app-version">
+			Version {{build.version}} ({{build.environment}})
+		</div>
 	</div>
  
 </body>
