--- a/index.html
+++ b/index.html
@@ -122,6 +122,9 @@
 
 	<link media="all" type="text/css" rel="stylesheet" href="css/style.css">
 
+	<!-- Favicon -->
+	<link rel="shortcut icon" type="image/png" href="favicon.png"/>
+
 </head>
 <body ng-app="opalAdmin" ng-controller="applicationController">
 	<div ng-include="'templates/navbar-menu.html'" ></div>
