--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 	<script src="bower_components/angular-translate/angular-translate.js"></script>
 	<script src="bower_components/angular-translate-loader-url/angular-translate-loader-url.js"></script>
 	<script src="bower_components/angular-translate-loader-static-files/angular-translate-loader-static-files.js"></script>
+	<script src="bower_components/angular-multiple-date-picker/dist/multipleDatePicker.js"></script>
+	<script src="bower_components/angularjs-dropdown-multiselect/dist/angularjs-dropdown-multiselect.min.js"></script>
+
 	<script src="bower_components/ng-idle/angular-idle.js"></script>
 	<script src="bower_components/moment/moment.js"></script>
 	<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
@@ -102,6 +105,7 @@
 	
 	<!-- bower:css -->
 	<link rel="stylesheet" href="bower_components/textAngular/dist/textAngular.css" />
+	<link rel="stylesheet" type="text/css" href="bower_components/angular-multiple-date-picker/dist/multipleDatePicker.css">
 	<!-- endbower -->
 
 	<!-- bower:font -->
