--- Upgraded fontawesome icons         -- Required changing some class names in template files     --- Added user activity log page         -- Login logout times

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 	<script src="js/lib/livicon/livicons-1.4-custom.min.js"></script>
 	<script src="js/lib/itemSlide/itemslide.min.js"></script>
 	<script src="js/lib/require/require.js"></script>
+	<script src="js/lib/fontawesome/fontawesome-all.min.js"></script>
 
 	<!-- Start Up -->
  	<script type="text/javascript" src="js/app/app.js"></script>
@@ -93,6 +94,7 @@
 	<script type="text/javascript" src="js/app/controllers/legacyQuestionnaireController.js"></script>
 	<script type="text/javascript" src="js/app/controllers/diagnosisTranslationController.js"></script>
 	<script type="text/javascript" src="js/app/controllers/newDiagnosisTranslationController.js"></script>
+ 	<script type="text/javascript" src="js/app/controllers/userActivityController.js"></script>
 
 	<!-- Collection -->
  	<script type="text/javascript" src="js/app/collections/collections.js"></script>
@@ -120,7 +122,6 @@
 	<link media="all" type="text/css" rel="stylesheet" href="css/lib/livicon.css">
 	<link media="all" type="text/css" rel="stylesheet" href="css/lib/prettify.css">
 	<link media="all" type="text/css" rel="stylesheet" href="css/lib/docs.min.css">
-	<link media="all" type="text/css" rel="stylesheet" href="css/lib/font-awesome.min.css">
 	<link media="all" type="text/css" rel="stylesheet" href="bower_components/textAngular/dist/textAngular.css">
 	<link media="all" type="text/css" rel="stylesheet" href="css/lib/ui.bootstrap.materialPicker.css">
 
