--- Starting to restructure directories and separate templates/controllers

--- a/index.html
+++ b/index.html
@@ -62,8 +62,10 @@
  	<script type="text/javascript" src="js/app/controllers/applicationController.js"></script>
  	<script type="text/javascript" src="js/app/controllers/navigationController.js"></script>
  	<script type="text/javascript" src="js/app/controllers/homeController.js"></script>
- 	<script type="text/javascript" src="js/app/controllers/aliasController.js"></script>
- 	<script type="text/javascript" src="js/app/controllers/newAliasController.js"></script>
+ 	<script type="text/javascript" src="js/app/controllers/alias/main.alias.js"></script>
+ 	<script type="text/javascript" src="js/app/controllers/alias/add.alias.js"></script>
+ 	<script type="text/javascript" src="js/app/controllers/alias/edit.alias.js"></script>
+ 	<script type="text/javascript" src="js/app/controllers/alias/delete.alias.js"></script>
  	<script type="text/javascript" src="js/app/controllers/postController.js"></script>
  	<script type="text/javascript" src="js/app/controllers/newPostController.js"></script>
  	<script type="text/javascript" src="js/app/controllers/newEduMatController.js"></script>
