--- Downgraded font awesome from 5 to 4         -- textAngular still uses version 4 and migration file does not work         -- required fixing class names     --- Added rich-text to all previously plain-text description fields

--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
 	<script src="js/lib/livicon/livicons-1.4-custom.min.js"></script>
 	<script src="js/lib/itemSlide/itemslide.min.js"></script>
 	<script src="js/lib/require/require.js"></script>
-	<script src="js/lib/fontawesome/fontawesome-all.min.js"></script>
+	<!-- <script src="js/lib/fontawesome/fontawesome-all.min.js"></script>
+	<script src="js/lib/fontawesome/fa-v4-shims.min.js"></script>-->
 
 	<!-- Start Up -->
  	<script type="text/javascript" src="js/app/app.js"></script>
@@ -162,6 +163,7 @@
 	<link media="all" type="text/css" rel="stylesheet" href="node_modules/angular-ui-grid/ui-grid.css">
 	<link media="all" type="text/css" rel="stylesheet" href="css/lib/animate.css">
 	<link media="all" type="text/css" rel="stylesheet" href="css/lib/livicon.css">
+	<link media="all" type="text/css" rel="stylesheet" href="css/lib/font-awesome.min.css">
 	<link media="all" type="text/css" rel="stylesheet" href="css/lib/prettify.css">
 	<link media="all" type="text/css" rel="stylesheet" href="css/lib/docs.min.css">
 	<link media="all" type="text/css" rel="stylesheet" href="bower_components/textAngular/dist/textAngular.css">
