--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <head>
 	<title>opal ADMIN</title>
 	<meta charset="utf-8">
+	<meta content="text/html; X-Content-Type-Options=nosniff" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		
 	<!-- Libraries -->
