--- Added backend logic for notification logs

--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
 	<script src="bower_components/angular-translate-loader-static-files/angular-translate-loader-static-files.js"></script>
 	<script src="bower_components/angular-multiple-date-picker/dist/multipleDatePicker.js"></script>
 	<script src="bower_components/angularjs-dropdown-multiselect/dist/angularjs-dropdown-multiselect.min.js"></script>
-
 	<script src="bower_components/ng-idle/angular-idle.js"></script>
 	<script src="bower_components/moment/moment.js"></script>
 	<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
@@ -44,6 +43,9 @@
 	<script src="bower_components/cryptojslib/components/mode-cfb-min.js"></script>
 	<script src="bower_components/cryptojslib/components/x64-core.js"></script>
 	<script src="bower_components/cryptojslib/components/sha512.js"></script>
+	<script src="bower_components/highcharts/highcharts.js"></script>
+	<script src="bower_components/highcharts-ng/dist/highcharts-ng.min.js"></script>
+
 
 	<script src="node_modules/angular-ui-grid/ui-grid.min.js"></script>
 	
@@ -88,6 +90,7 @@
  	<script type="text/javascript" src="js/app/controllers/notification/add.notification.js"></script>
  	<script type="text/javascript" src="js/app/controllers/notification/edit.notification.js"></script>
  	<script type="text/javascript" src="js/app/controllers/notification/delete.notification.js"></script>
+ 	<script type="text/javascript" src="js/app/controllers/notification/log.notification.js"></script>
 
  	<script type="text/javascript" src="js/app/controllers/patient/patient.js"></script>
  	<script type="text/javascript" src="js/app/controllers/patient/block.patient.js"></script>
@@ -169,6 +172,7 @@
 	<link media="all" type="text/css" rel="stylesheet" href="css/lib/docs.min.css">
 	<link media="all" type="text/css" rel="stylesheet" href="bower_components/textAngular/dist/textAngular.css">
 	<link media="all" type="text/css" rel="stylesheet" href="css/lib/ui.bootstrap.materialPicker.css">
+	<link media="all" type="text/css" rel="stylesheet" href="bower_components/highcharts-ng/dist/highcharts-ng.css">
 
 	<link media="all" type="text/css" rel="stylesheet" href="css/style.css">
 
