--- Added individual logs to posts

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
  	<script type="text/javascript" src="js/app/controllers/post/add.post.js"></script>
  	<script type="text/javascript" src="js/app/controllers/post/edit.post.js"></script>
  	<script type="text/javascript" src="js/app/controllers/post/delete.post.js"></script>
+ 	<script type="text/javascript" src="js/app/controllers/post/log.post.js"></script>
 
  	<script type="text/javascript" src="js/app/controllers/educational-material/educationalMaterial.js"></script>
  	<script type="text/javascript" src="js/app/controllers/educational-material/add.educationalMaterial.js"></script>
