--- Added individual logs for educational material

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
  	<script type="text/javascript" src="js/app/controllers/educational-material/add.educationalMaterial.js"></script>
  	<script type="text/javascript" src="js/app/controllers/educational-material/edit.educationalMaterial.js"></script>
  	<script type="text/javascript" src="js/app/controllers/educational-material/delete.educationalMaterial.js"></script>
+ 	<script type="text/javascript" src="js/app/controllers/educational-material/log.educationalMaterial.js"></script>
 
  	<script type="text/javascript" src="js/app/controllers/hospital-map/hospitalMap.js"></script>
  	<script type="text/javascript" src="js/app/controllers/hospital-map/add.hospitalMap.js"></script>
