--- Added individual logs to test results

--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
  	<script type="text/javascript" src="js/app/controllers/test-result/add.testResult.js"></script>
  	<script type="text/javascript" src="js/app/controllers/test-result/edit.testResult.js"></script>
  	<script type="text/javascript" src="js/app/controllers/test-result/delete.testResult.js"></script>
+ 	<script type="text/javascript" src="js/app/controllers/test-result/log.testResult.js"></script>
 
  	<script type="text/javascript" src="js/app/controllers/cron/cron.js"></script>
 
