--- Added individual logs for emails

--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
  	<script type="text/javascript" src="js/app/controllers/email/add.email.js"></script>
  	<script type="text/javascript" src="js/app/controllers/email/edit.email.js"></script>
  	<script type="text/javascript" src="js/app/controllers/email/delete.email.js"></script>
+ 	<script type="text/javascript" src="js/app/controllers/email/log.email.js"></script>
 
  	<script type="text/javascript" src="js/app/controllers/questionnaire/questionnaire.js"></script>
  	<script type="text/javascript" src="js/app/controllers/questionnaire/add.questionnaire.js"></script>
