--- Added individual logs to legacy questionnaires

--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
 	<script type="text/javascript" src="js/app/controllers/legacy-questionnaire/add.legacyQuestionnaire.js"></script>
 	<script type="text/javascript" src="js/app/controllers/legacy-questionnaire/edit.legacyQuestionnaire.js"></script>
 	<script type="text/javascript" src="js/app/controllers/legacy-questionnaire/delete.legacyQuestionnaire.js"></script>
+	<script type="text/javascript" src="js/app/controllers/legacy-questionnaire/log.legacyQuestionnaire.js"></script>
 
 	<script type="text/javascript" src="js/app/controllers/diagnosis/diagnosisTranslation.js"></script>
 	<script type="text/javascript" src="js/app/controllers/diagnosis/add.diagnosisTranslation.js"></script>
