--- Added cron logs to display all content publishing

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 	<script src="bower_components/angularjs-dropdown-multiselect/dist/angularjs-dropdown-multiselect.min.js"></script>
 	<script src="bower_components/ng-idle/angular-idle.js"></script>
 	<script src="bower_components/moment/moment.js"></script>
+	<script src="bower_components/moment-timezone/builds/moment-timezone.min.js"></script>
+	<script src="bower_components/moment-timezone/builds/moment-timezone-with-data.min.js"></script>
 	<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 	<script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 	<script src="bower_components/rangy/rangy-core.js"></script>
@@ -109,6 +111,7 @@
  	<script type="text/javascript" src="js/app/controllers/test-result/log.testResult.js"></script>
 
  	<script type="text/javascript" src="js/app/controllers/cron/cron.js"></script>
+ 	<script type="text/javascript" src="js/app/controllers/cron/log.cron.js"></script>
 
  	<script type="text/javascript" src="js/app/controllers/login/login.js"></script>
  	<script type="text/javascript" src="js/app/controllers/login/loginModal.js"></script>
