--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<meta charset="utf-8">
 	<meta content="text/html; X-Content-Type-Options=nosniff" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		
 	<!-- Libraries -->
 	<script src="bower_components/jquery/dist/jquery.js"></script>
