--- a/index.html
+++ b/index.html
@@ -142,6 +142,11 @@
 	<script type="text/javascript" src="js/app/controllers/question/edit.question.js"></script>
 	<script type="text/javascript" src="js/app/controllers/question/delete.question.js"></script>
 
+	<script type="text/javascript" src="js/app/controllers/question-type/question.type.js"></script>
+	<script type="text/javascript" src="js/app/controllers/question-type/add.question.type.js"></script>
+	<script type="text/javascript" src="js/app/controllers/question-type/edit.question.type.js"></script>
+	<script type="text/javascript" src="js/app/controllers/question-type/delete.question.type.js"></script>
+
 	<script type="text/javascript" src="js/app/controllers/legacy-questionnaire/legacyQuestionnaire.js"></script>
 	<script type="text/javascript" src="js/app/controllers/legacy-questionnaire/add.legacyQuestionnaire.js"></script>
 	<script type="text/javascript" src="js/app/controllers/legacy-questionnaire/edit.legacyQuestionnaire.js"></script>
