Creation of the files for the Publication Tools

--- a/index.html
+++ b/index.html
@@ -137,6 +137,11 @@
  	<script type="text/javascript" src="js/app/controllers/questionnaire/edit.questionnaire.js"></script>
  	<script type="text/javascript" src="js/app/controllers/questionnaire/delete.questionnaire.js"></script>
 
+ 	<script type="text/javascript" src="js/app/controllers/publication-tool/publication.tool.js"></script>
+ 	<script type="text/javascript" src="js/app/controllers/publication-tool/add.publication.tool.js"></script>
+ 	<script type="text/javascript" src="js/app/controllers/publication-tool/edit.publication.tool.js"></script>
+ 	<script type="text/javascript" src="js/app/controllers/publication-tool/delete.publication.tool.js"></script>
+
 	<script type="text/javascript" src="js/app/controllers/question/question.js"></script>
 	<script type="text/javascript" src="js/app/controllers/question/add.question.js"></script>
 	<script type="text/javascript" src="js/app/controllers/question/edit.question.js"></script>
