Updating for publication tools and changed names of post in french

--- a/index.html
+++ b/index.html
@@ -137,6 +137,10 @@
  	<script type="text/javascript" src="js/app/controllers/questionnaire/edit.questionnaire.js"></script>
  	<script type="text/javascript" src="js/app/controllers/questionnaire/delete.questionnaire.js"></script>
 
+ 	<script type="text/javascript" src="js/app/controllers/publication/publication.js"></script>
+ 	<script type="text/javascript" src="js/app/controllers/publication/add.publication.js"></script>
+ 	<script type="text/javascript" src="js/app/controllers/publication/edit.publication.js"></script>
+
  	<script type="text/javascript" src="js/app/controllers/publication-tool/publication.tool.js"></script>
  	<script type="text/javascript" src="js/app/controllers/publication-tool/add.publication.tool.js"></script>
  	<script type="text/javascript" src="js/app/controllers/publication-tool/edit.publication.tool.js"></script>
