--- a/index.html
+++ b/index.html
@@ -140,10 +140,11 @@
  	<script type="text/javascript" src="js/app/controllers/publication/publication.js"></script>
  	<script type="text/javascript" src="js/app/controllers/publication/add.publication.js"></script>
  	<script type="text/javascript" src="js/app/controllers/publication/edit.publication.js"></script>
+    <script type="text/javascript" src="js/app/controllers/publication/log.publication.js"></script>
 
- 	<script type="text/javascript" src="js/app/controllers/publication-tool/publication.tool.js"></script>
- 	<script type="text/javascript" src="js/app/controllers/publication-tool/add.publication.tool.js"></script>
- 	<script type="text/javascript" src="js/app/controllers/publication-tool/edit.publication.tool.js"></script>
+    <!-- 	<script type="text/javascript" src="js/app/controllers/publication-tool/publication.tool.js"></script>
+         <script type="text/javascript" src="js/app/controllers/publication-tool/add.publication.tool.js"></script>
+         <script type="text/javascript" src="js/app/controllers/publication-tool/edit.publication.tool.js"></script>-->
 
 	<script type="text/javascript" src="js/app/controllers/question/question.js"></script>
 	<script type="text/javascript" src="js/app/controllers/question/add.question.js"></script>
