OPAL-218 - Preparing files for custom codes

--- a/index.html
+++ b/index.html
@@ -142,10 +142,6 @@
  	<script type="text/javascript" src="js/app/controllers/publication/edit.publication.js"></script>
     <script type="text/javascript" src="js/app/controllers/publication/log.publication.js"></script>
 
-    <!-- 	<script type="text/javascript" src="js/app/controllers/publication-tool/publication.tool.js"></script>
-         <script type="text/javascript" src="js/app/controllers/publication-tool/add.publication.tool.js"></script>
-         <script type="text/javascript" src="js/app/controllers/publication-tool/edit.publication.tool.js"></script>-->
-
 	<script type="text/javascript" src="js/app/controllers/question/question.js"></script>
 	<script type="text/javascript" src="js/app/controllers/question/add.question.js"></script>
 	<script type="text/javascript" src="js/app/controllers/question/edit.question.js"></script>
@@ -160,6 +156,11 @@
 	<script type="text/javascript" src="js/app/controllers/diagnosis/add.diagnosisTranslation.js"></script>
 	<script type="text/javascript" src="js/app/controllers/diagnosis/edit.diagnosisTranslation.js"></script>
 	<script type="text/javascript" src="js/app/controllers/diagnosis/delete.diagnosisTranslation.js"></script>
+
+	<script type="text/javascript" src="js/app/controllers/custom-codes/custom.codes.js"></script>
+	<script type="text/javascript" src="js/app/controllers/custom-codes/add.custom.code.js"></script>
+	<script type="text/javascript" src="js/app/controllers/custom-codes/edit.custom.code.js"></script>
+	<script type="text/javascript" src="js/app/controllers/custom-codes/delete.custom.code.js"></script>
 
 	<!-- Collection -->
  	<script type="text/javascript" src="js/app/collections/collections.js"></script>
