--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
  	<script type="text/javascript" src="js/app/controllers/user/user.js"></script>
  	<script type="text/javascript" src="js/app/controllers/user/add.user.js"></script>
  	<script type="text/javascript" src="js/app/controllers/user/edit.user.js"></script>
+ 	<script type="text/javascript" src="js/app/controllers/user/edit.user.ad.js"></script>
  	<script type="text/javascript" src="js/app/controllers/user/delete.user.js"></script>
  	<script type="text/javascript" src="js/app/controllers/user/log.user.js"></script>
 
