--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
  	<script type="text/javascript" src="js/app/controllers/user/account.js"></script>
  	<script type="text/javascript" src="js/app/controllers/user/user.js"></script>
  	<script type="text/javascript" src="js/app/controllers/user/add.user.js"></script>
+ 	<script type="text/javascript" src="js/app/controllers/user/add.user.ad.js"></script>
  	<script type="text/javascript" src="js/app/controllers/user/edit.user.js"></script>
  	<script type="text/javascript" src="js/app/controllers/user/edit.user.ad.js"></script>
  	<script type="text/javascript" src="js/app/controllers/user/delete.user.js"></script>
