--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
  	<script type="text/javascript" src="js/app/controllers/login/login.js"></script>
  	<script type="text/javascript" src="js/app/controllers/login/loginModal.js"></script>
 
+ 	<script type="text/javascript" src="js/app/controllers/user/account.ad.js"></script>
  	<script type="text/javascript" src="js/app/controllers/user/account.js"></script>
  	<script type="text/javascript" src="js/app/controllers/user/user.js"></script>
  	<script type="text/javascript" src="js/app/controllers/user/add.user.js"></script>
