OPAL-276 - Fixed minor bugs and finished list view of studies

--- a/index.html
+++ b/index.html
@@ -165,6 +165,11 @@
 	<script type="text/javascript" src="js/app/controllers/custom-code/edit.custom.code.js"></script>
 	<script type="text/javascript" src="js/app/controllers/custom-code/delete.custom.code.js"></script>
 
+	<script type="text/javascript" src="js/app/controllers/study/studies.js"></script>
+	<script type="text/javascript" src="js/app/controllers/study/add.study.js"></script>
+	<script type="text/javascript" src="js/app/controllers/study/edit.study.js"></script>
+	<script type="text/javascript" src="js/app/controllers/study/delete.study.js"></script>
+
 	<!-- Collection -->
  	<script type="text/javascript" src="js/app/collections/collections.js"></script>
 
