OPAL-261 - coding of roles listing underway.

--- a/index.html
+++ b/index.html
@@ -170,6 +170,11 @@
 	<script type="text/javascript" src="js/app/controllers/study/edit.study.js"></script>
 	<script type="text/javascript" src="js/app/controllers/study/delete.study.js"></script>
 
+	<script type="text/javascript" src="js/app/controllers/role/roles.js"></script>
+	<script type="text/javascript" src="js/app/controllers/role/add.role.js"></script>
+	<script type="text/javascript" src="js/app/controllers/role/edit.role.js"></script>
+	<script type="text/javascript" src="js/app/controllers/role/delete.role.js"></script>
+
 	<!-- Collection -->
  	<script type="text/javascript" src="js/app/collections/collections.js"></script>
 
