OPAL-385 - changed error 403 message modal. Added Error Handler service. Regrouped all php files under php directory.

--- a/index.html
+++ b/index.html
@@ -175,6 +175,8 @@
 	<script type="text/javascript" src="js/app/controllers/role/edit.role.js"></script>
 	<script type="text/javascript" src="js/app/controllers/role/delete.role.js"></script>
 
+	<script type="text/javascript" src="js/app/controllers/error-handler/access.denied.js"></script>
+
 	<!-- Collection -->
  	<script type="text/javascript" src="js/app/collections/collections.js"></script>
 
