OPAL-385 - Dynamic linking nav and sub nav menus underway

--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
  	<script type="text/javascript" src="js/app/controllers/application.js"></script>
  	<script type="text/javascript" src="js/app/controllers/navigation.js"></script>
 
+ 	<script type="text/javascript" src="js/app/controllers/home/home.js"></script
+	>
  	<script type="text/javascript" src="js/app/controllers/alias/alias.js"></script>
  	<script type="text/javascript" src="js/app/controllers/alias/add.alias.js"></script>
  	<script type="text/javascript" src="js/app/controllers/alias/edit.alias.js"></script>
