OPAL-469 - creating files for alert modules

--- a/index.html
+++ b/index.html
@@ -177,6 +177,11 @@
 	<script type="text/javascript" src="js/app/controllers/role/edit.role.js"></script>
 	<script type="text/javascript" src="js/app/controllers/role/delete.role.js"></script>
 
+	<script type="text/javascript" src="js/app/controllers/alert/alerts.js"></script>
+	<script type="text/javascript" src="js/app/controllers/alert/add.alert.js"></script>
+	<script type="text/javascript" src="js/app/controllers/alert/edit.alert.js"></script>
+	<script type="text/javascript" src="js/app/controllers/alert/delete.alert.js"></script>
+
 	<script type="text/javascript" src="js/app/controllers/error-handler/access.denied.js"></script>
 
 	<!-- Collection -->
