opal-530 - finished audit view list

--- a/index.html
+++ b/index.html
@@ -182,6 +182,9 @@
 	<script type="text/javascript" src="js/app/controllers/alert/edit.alert.js"></script>
 	<script type="text/javascript" src="js/app/controllers/alert/delete.alert.js"></script>
 
+	<script type="text/javascript" src="js/app/controllers/audit/audits.js"></script>
+	<script type="text/javascript" src="js/app/controllers/audit/view.audit.js"></script>
+
 	<script type="text/javascript" src="js/app/controllers/error-handler/access.denied.js"></script>
 
 	<!-- Collection -->
