opal-609 - added master source diagnosis listing

--- a/index.html
+++ b/index.html
@@ -137,6 +137,8 @@
  	<script type="text/javascript" src="js/app/controllers/email/delete.email.js"></script>
  	<script type="text/javascript" src="js/app/controllers/email/log.email.js"></script>
 
+ 	<script type="text/javascript" src="js/app/controllers/master-source/masterSourceDiagnosis.js"></script>
+
  	<script type="text/javascript" src="js/app/controllers/questionnaire/questionnaire.js"></script>
  	<script type="text/javascript" src="js/app/controllers/questionnaire/add.questionnaire.js"></script>
  	<script type="text/javascript" src="js/app/controllers/questionnaire/edit.questionnaire.js"></script>
