--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
  	<script type="text/javascript" src="js/app/controllers/email/log.email.js"></script>
 
  	<script type="text/javascript" src="js/app/controllers/master-source/masterSourceDiagnosis.js"></script>
+ 	<script type="text/javascript" src="js/app/controllers/master-source/add.masterSourceDiagnosis.js"></script>
 
  	<script type="text/javascript" src="js/app/controllers/questionnaire/questionnaire.js"></script>
  	<script type="text/javascript" src="js/app/controllers/questionnaire/add.questionnaire.js"></script>
