opal-609 - GUI of Master Source Test Results done.

--- a/index.html
+++ b/index.html
@@ -142,7 +142,12 @@
  	<script type="text/javascript" src="js/app/controllers/master-source/edit.masterSourceDiagnosis.js"></script>
  	<script type="text/javascript" src="js/app/controllers/master-source/delete.masterSourceDiagnosis.js"></script>
 
- 	<script type="text/javascript" src="js/app/controllers/questionnaire/questionnaire.js"></script>
+	<script type="text/javascript" src="js/app/controllers/master-source/masterSourceTestResult.js"></script>
+	<script type="text/javascript" src="js/app/controllers/master-source/add.masterSourceTestResult.js"></script>
+	<script type="text/javascript" src="js/app/controllers/master-source/edit.masterSourceTestResult.js"></script>
+	<script type="text/javascript" src="js/app/controllers/master-source/delete.masterSourceTestResult.js"></script>
+
+	<script type="text/javascript" src="js/app/controllers/questionnaire/questionnaire.js"></script>
  	<script type="text/javascript" src="js/app/controllers/questionnaire/add.questionnaire.js"></script>
  	<script type="text/javascript" src="js/app/controllers/questionnaire/edit.questionnaire.js"></script>
  	<script type="text/javascript" src="js/app/controllers/questionnaire/delete.questionnaire.js"></script>
