OPAL-609 - adding master source alias methods

--- a/index.html
+++ b/index.html
@@ -137,6 +137,11 @@
  	<script type="text/javascript" src="js/app/controllers/email/delete.email.js"></script>
  	<script type="text/javascript" src="js/app/controllers/email/log.email.js"></script>
 
+ 	<script type="text/javascript" src="js/app/controllers/master-source/masterSourceAlias.js"></script>
+ 	<script type="text/javascript" src="js/app/controllers/master-source/add.masterSourceAlias.js"></script>
+ 	<script type="text/javascript" src="js/app/controllers/master-source/edit.masterSourceAlias.js"></script>
+ 	<script type="text/javascript" src="js/app/controllers/master-source/delete.masterSourceAlias.js"></script>
+
  	<script type="text/javascript" src="js/app/controllers/master-source/masterSourceDiagnosis.js"></script>
  	<script type="text/javascript" src="js/app/controllers/master-source/add.masterSourceDiagnosis.js"></script>
  	<script type="text/javascript" src="js/app/controllers/master-source/edit.masterSourceDiagnosis.js"></script>
