Formalized new Patient Reports module within opalAdmin
Added definition for patient reports module to config.php
Added state variables for each report type to app.js
Added additional controller 'patientReportHandler' to route user to each report type
reportHandler is the controller of the original patient-report html file within patient templates
User now loads individual and group reports separately, which is needed to comply with current software pattern

Related Jira Issues: #415

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
 	 
 	<script type="text/javascript" src="js/app/controllers/patient-reports/patientReports.js"></script>
 	<script type="text/javascript" src="js/app/controllers/patient-reports/groupReports.js"></script>
+	<script type="text/javascript" src="js/app/controllers/patient-reports/patientReportHandler.js"></script>
 
  	<script type="text/javascript" src="js/app/controllers/test-result/testResult.js"></script>
  	<script type="text/javascript" src="js/app/controllers/test-result/add.testResult.js"></script>
