--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
 
 
 	<script src="node_modules/angular-ui-grid/ui-grid.min.js"></script>
+	<script src="node_modules/angular-ui-grid/ui-grid.auto-resize.min.js"></script>
+
 	
 	<script src="js/lib/bootstrap/bootstrap-datetimepicker.min.js"></script>
 	<script src="js/lib/bootstrap/ui.bootstrap.materialPicker.js"></script>
